--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Hello mấy ní, đây là trang web của tui!</h1>
   <p>Trang này tui code</p>
-  <button onclick="sayHi()">Bấm vào tao nè</button>
+  <button onclick="sayHi()">Bấm vào tui nè</button>
 
   <script src="script.js"></script>
 </body>
