--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Trang Web Của Tao</title>
+  <title>Trang Web Của Tài</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
